Alignement coeur et titre, correction surlignement vert et catégorie plats

--- a/Menus/style.css
+++ b/Menus/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 body {
   margin: 0;
   font-family: "Roboto", sans-serif;
@@ -53,6 +52,9 @@ header a {
   font-family: "Shrikhand", cursive;
   margin: 50px 20px 35px;
   font-size: 1.8em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .fa-heart {
@@ -77,31 +79,12 @@ header a {
   margin-left: 20px;
 }
 
-.categorie1::before {
-  content: "ENTR";
-  border-bottom: 5px solid #99E2D0;
-}
-
-.categorie1::after {
-  content: "ÉES";
-}
-
-.categorie2::before {
-  content: "PLAT";
-  border-bottom: 5px solid #99E2D0;
-}
-
-.categorie2::after {
-  content: "S";
-}
-
-.categorie3::before {
-  content: "DESSE";
-  border-bottom: 5px solid #99E2D0;
-}
-
-.categorie3::after {
-  content: "RTS";
+.categorie::after {
+  content: "";
+  border-bottom: 4px solid #99E2D0;
+  display: block;
+  width: 60px;
+  margin-top: 6px;
 }
 
 .intitules {
@@ -112,7 +95,7 @@ header a {
 
 .plats {
   background-color: white;
-  box-shadow: 0px 3px 14px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
   border-radius: 20px 20px 20px 20px;
   margin: 20px;
   line-height: 0.4;
@@ -134,7 +117,7 @@ header a {
   border: none;
   background: linear-gradient(to bottom, #FF79DA, #9356DC);
   border-radius: 40px 40px 40px 40px;
-  box-shadow: 0px 3px 14px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
   height: 70px;
   padding: 0 70px;
   display: block;
