--- a/sass/main.scss
+++ b/sass/main.scss
@@ -47,6 +47,9 @@ header a {
     font-family: 'Shrikhand', cursive;
     margin: 50px 20px 35px;
     font-size: 1.8em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .fa-heart {
     display: flex;
@@ -63,32 +66,20 @@ header a {
     position: relative;
     margin-top: -35px;
     padding-bottom: 100px;
-}    
+}
+
 .categorie {
     font-weight: normal;
     margin-left: 20px;
 }
-.categorie1::before {
-    content: "ENTR";
-    border-bottom: 5px solid #99E2D0;
+.categorie::after {
+    content: "";
+    border-bottom: 4px solid #99E2D0;
+    display: block;
+    width: 60px;
+    margin-top: 6px;
 }
-.categorie1::after {
-    content: "ÉES";
-}
-.categorie2::before {
-    content: "PLAT";
-    border-bottom: 5px solid #99E2D0;
-}
-.categorie2::after {
-    content: "S";
-}
-.categorie3::before {
-    content: "DESSE";
-    border-bottom: 5px solid #99E2D0;
-}
-.categorie3::after {
-    content: "RTS";
-}
+
 .intitules {
     display: flex;
     flex-direction: column;
@@ -96,7 +87,7 @@ header a {
 }
 .plats {
     background-color: white;
-    box-shadow: 0px 3px 14px rgb(0 0 0 / 30%);
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
     border-radius: 20px 20px 20px 20px;
     margin: 20px;
     line-height: 0.4;
@@ -115,7 +106,7 @@ header a {
     border: none;
     background: linear-gradient(to bottom,#FF79DA,#9356DC);
     border-radius: 40px 40px 40px 40px;
-    box-shadow: 0px 3px 14px rgb(0 0 0 / 30%);
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
     height: 70px;
     padding: 0 70px;
     display: block;
